[metadata]
name = RecoLul
version = attr: recolul.__version__
author = Jean-Loup Roussel-Clouet
author_email = jean-loup@cryptact.com
description = Overtime management for RecoRu
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Maerig/recolul
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    beautifulsoup4~=4.11
    plotly~=5.18
    requests~=2.31
python_requires = >=3.10

[options.entry_points]
console_scripts =
    recolul = recolul.cli:main

[options.extras_require]
dev =
    build~=1.0.3
    pytest~=7.4
    twine~=4.0
gui =
    pyside6~=6.7.0

[options.packages.find]
include =
    recolul
    recolul.*
